# rotary-adventure

./: CMakeLists.txt  README.md  bootstrap.sh  build.sh  i2c_device.cc  i2c_device.h  lis3mdl.cc  lis3mdl.h  lsm6ds33.cc  lsm6ds33.h  main.cc  make_and_flash.sh  serial_monitor.sh  vl6180x.cc  vl6180x.h
.github/linters/: .yaml-lint.yml
.github/workflows/: lint_and_test.yml  linter.yml  tests.yml
scripts/: make_and_flash.sh
src/: main.cc
src/devices/: CMakeLists.txt  i2c_device.cc  i2c_device.h  lsm6ds33.h
